# eece-5183-compiler

./: Cargo.toml  README.md  install-llvm.sh
spec/: basic.src
spec/incorrect/: test1b.src
src/: generator.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs
src/generator/: cstd.rs  expression.rs  mstd.rs  program.rs  statement.rs  util.rs  variable.rs
src/generator/expression/: arithmetic.rs  factor.rs  relation.rs  term.rs
src/parser/: expression.rs  general.rs  procedure.rs  statement.rs  util.rs  variable.rs
