[package]
name = "eece-5183-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.4", features = ["derive"] }
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
thiserror = "1.0.57"

[dev-dependencies]
rstest = "0.18.2"
